--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,10 @@
 services:
   api:
     build: .
-    ports:
-      - "8001:8000"
+    ports: ["8001:8000"]
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL","curl -fsS http://127.0.0.1:8000/healthz || exit 1"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
