--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,15 +3,20 @@ on:
   push:
     branches: ["**"]
   pull_request:
+
+env:
+  MPLBACKEND: Agg
+
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-python@v5
-      with:
-        python-version: "3.13"
-    - run: python -m pip install -U pip
-    - run: python -m pip install -r requirements.txt nbclient pytest fastapi uvicorn
-    - run: python scripts/run_all.py
-    - run: pytest
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
+      - run: python -m pip install -U pip
+      - run: python -m pip install -r requirements.txt nbclient pytest fastapi uvicorn
+      - run: python -m ipykernel install --user --name wcct --display-name "Python (wcct)"
+      - run: python scripts/run_all.py
+      - run: pytest
